Fix for proper truncating of Blog Post titles in the search results

--- a/web/less/frontend/_collector.less
+++ b/web/less/frontend/_collector.less
@@ -100,10 +100,8 @@
 	h3 {
 		width: 100%;
 		height: 44px;
-		overflow: hidden;
-		.custom-font(18px, 20px, normal, normal);
-	//	text-overflow: ellipsis;
-	//	white-space: normal;
+		.custom-font(18px, 22px, normal, normal);
+    overflow: hidden;
 	}
 
 	blockquote {
